Fix #117437. Linebreaks were not shown properly because non-rich text notes were shown in a rich text interpreter. I wonder why it worked before, the implementation was completely missing...

BUG: 117437

svn path=/branches/KDE/3.5/kdepim/; revision=495049